# RevGate

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose-development.yaml  main.py  pyproject.toml  rebuild.sh  run_dependency_type_classifier.py  run_expanded_validation.py  run_invariant_checker.py  run_luad_subtype_analysis.py  run_mediation_brca.py  run_multivariate_cox.py  run_sensitivity_analysis.py  run_ssgsea_analysis.py
config/: development.yaml  gene_signatures.yaml  settings.yaml
docs/: nv_score_weight_derivation.md
results/: bootstrap_pca_all_iterations.csv  bootstrap_pca_results.json  dependency_type_classifier_results.json  dependency_type_classifier_summary.csv  expanded_validation_results.csv  expanded_validation_results.json  extended_cox_sel_pli_validation.json  interaction_treatment_results.json  interaction_treatment_summary.csv  invariant_checker_results.json  invariant_checker_results.txt  luad_subtype_results.json  mediation_brca_results.json  metabric_cox_results.csv  metabric_external_validation_results.json  metabric_restricted_followup.json  multivariate_cox_detail.csv  multivariate_cox_results.csv  ov_restricted_followup.csv  sensitivity_jackknife.json  sensitivity_kappa_matrix.csv  sensitivity_loo_weights.csv  sensitivity_threshold_sweep.csv  sensitivity_weighting_classes.csv  sensitivity_weighting_scores.csv  ssgsea_cox_results.csv  stage_stratified_cox_results.csv
scripts/: run_20cancer_expansion.py  run_bootstrap_pca_weights.py  run_brca_subtype_stratification.py  run_interaction_treatment.py  (+5 more)
tests/: conftest.py
(+68 files in other folders)
