[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "revgate"
version = "0.1.0"
description = "Empirical validation of the DNV-TC hypothesis via DepMap, TCGA, STRING and gnomAD"
requires-python = ">=3.11"

dependencies = [
    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",

    # Statistics
    "scipy>=1.11",
    "statsmodels>=0.14",

    # Survival analysis
    "lifelines>=0.27",

    # Network analysis
    "networkx>=3.1",

    # Gene set enrichment
    "gseapy>=1.0",

    # Machine learning / metrics
    "scikit-learn>=1.3",

    # Visualisation
    "matplotlib>=3.7",
    "seaborn>=0.12",

    # Configuration
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # CLI
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
revgate = "revgate.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
